<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="balance"
            type="java.lang.String" />

        <variable
            name="activity"
            type="com.example.payfromhome.view.MainActivity" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary"
        android:gravity="center_horizontal"
        tools:context=".view.MainActivity">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/home"
                    android:textAllCaps="true"
                    android:textSize="32sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_balance"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{balance}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:onClick="@{activity.cardElectricityClick}"
                        android:orientation="vertical">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/card_electricity"
                            android:layout_width="match_parent"
                            android:layout_height="120dp"
                            android:layout_margin="16dp"
                            app:cardBackgroundColor="@color/white">

                            <com.google.android.material.imageview.ShapeableImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="16dp"
                                android:src="@drawable/ic_electricity" />

                        </androidx.cardview.widget.CardView>

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/TextAppearance.AppCompat.Title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/listrik" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:onClick="@{activity.cardWaterClick}"
                        android:orientation="vertical">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/card_water"
                            android:layout_width="match_parent"
                            android:layout_height="120dp"
                            android:layout_margin="16dp"
                            app:cardBackgroundColor="@color/white">

                            <com.google.android.material.imageview.ShapeableImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="16dp"
                                android:src="@drawable/ic_water" />

                        </androidx.cardview.widget.CardView>

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/TextAppearance.AppCompat.Title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/air" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:onClick="@{activity.cardHistoryClick}"
                        android:orientation="vertical">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/card_history"
                            android:layout_width="match_parent"
                            android:layout_height="120dp"
                            android:layout_margin="16dp"
                            app:cardBackgroundColor="@color/white">

                            <com.google.android.material.imageview.ShapeableImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="16dp"
                                android:src="@drawable/ic_baseline_history_24"
                                app:tint="@color/black" />

                        </androidx.cardview.widget.CardView>

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/TextAppearance.AppCompat.Title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/riwayat" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:onClick="@{activity.cardAboutClick}"
                        android:orientation="vertical">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/card_about"
                            android:layout_width="match_parent"
                            android:layout_height="120dp"
                            android:layout_margin="16dp"
                            app:cardBackgroundColor="@color/white">

                            <com.google.android.material.imageview.ShapeableImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="16dp"
                                android:src="@drawable/ic_about_us" />

                        </androidx.cardview.widget.CardView>

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/TextAppearance.AppCompat.Title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/about_us" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:onClick="@{activity.cardProfileClick}"
                        android:orientation="vertical">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/card_profile"
                            android:layout_width="match_parent"
                            android:layout_height="120dp"
                            android:layout_margin="16dp"
                            app:cardBackgroundColor="@color/white">

                            <com.google.android.material.imageview.ShapeableImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="16dp"
                                android:src="@drawable/ic_baseline_person_24"
                                app:tint="@color/black" />

                        </androidx.cardview.widget.CardView>

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/TextAppearance.AppCompat.Title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/profil" />

                    </LinearLayout>

                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="@color/button_secondary"
                    android:onClick="@{activity.btnLogoutClick}"
                    android:padding="12dp"
                    android:text="@string/keluar" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>